FILE(GLOB_RECURSE BUILD_FILE_LIST CONFIGURE_DEPENDS 
    "*.cpp" "*.c"
)

ADD_LIBRARY(libevp STATIC 
    ${BUILD_FILE_LIST}
)

TARGET_INCLUDE_DIRECTORIES(libevp PUBLIC  "${EVP_HEADERS}")
TARGET_INCLUDE_DIRECTORIES(libevp PRIVATE "${EVP_ROOT}/source")

SET_TARGET_PROPERTIES(libevp PROPERTIES LINKER_LANGUAGE CXX)
SET_TARGET_PROPERTIES(libevp PROPERTIES PREFIX "")
SET_TARGET_PROPERTIES(libevp PROPERTIES OUTPUT_NAME "libevp")
