FILE(GLOB_RECURSE BUILD_FILE_LIST CONFIGURE_DEPENDS 
    "*.cpp" "*.c"
)

FILE(GLOB_RECURSE MD5_FILE_LIST CONFIGURE_DEPENDS 
    "${EVP_LIBRARIES}/md5/*.cpp"
)

FILE(GLOB_RECURSE MINIZ_FILE_LIST CONFIGURE_DEPENDS 
    "${EVP_LIBRARIES}/miniz/*.c"
)

ADD_LIBRARY(libevp STATIC 
    ${BUILD_FILE_LIST}
    ${MD5_FILE_LIST}
    ${MINIZ_FILE_LIST}
)

TARGET_INCLUDE_DIRECTORIES(libevp PUBLIC  "${EVP_HEADERS}")
TARGET_INCLUDE_DIRECTORIES(libevp PRIVATE "${EVP_LIBRARIES}")
TARGET_INCLUDE_DIRECTORIES(libevp PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}")

SET_TARGET_PROPERTIES(libevp PROPERTIES LINKER_LANGUAGE CXX)
SET_TARGET_PROPERTIES(libevp PROPERTIES PREFIX "")
SET_TARGET_PROPERTIES(libevp PROPERTIES OUTPUT_NAME "libevp")
