CMAKE_MINIMUM_REQUIRED (VERSION 3.8)

INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/libevp")
LINK_DIRECTORIES("${CMAKE_SOURCE_DIR}/src/lib")

IF(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
	ADD_LIBRARY(evp SHARED
		"utilities/filtering.cpp"
		"libevp.cpp"
	)
ELSEIF(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
	ADD_LIBRARY(libevp SHARED
		"utilities/filtering.cpp"
		"libevp.cpp"
	)

	IF (CMAKE_BUILD_TYPE STREQUAL "Debug")
		SET_TARGET_PROPERTIES(libevp PROPERTIES OUTPUT_NAME "libevpd")
	ENDIF()
ENDIF()

SET_TARGET_PROPERTIES(libevp PROPERTIES LINKER_LANGUAGE CXX)
